[tool.poetry]
name = "vote-post-bot"
version = "0.1.0"
description = "Telegram bot to vote for the next post in a channel."
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
isort = "^5.13.2"
icecream = "^2.1.3"

[tool.ruff]
line-length = 80
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL"]
ignore = ["D407", "D107", "D213", "D203"]
unfixable = ["I"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
